# Histogram

./: .gitignore  CMakeLists.txt  README.md
plot/: heatmap.py
src/: gauss.cpp  gauss.hpp  hist.cpp  hist.hpp  main.cpp
tests/: test.cpp  test.hpp
